--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: "terraform init"
       - run:
           name: "Terraform apply"
-          command: "terraform destroy -auto-approve"
+          command: "terraform apply"
 
 workflows:
   infra-creation:
